fix light/dark mode

--- a/fullStack/vite_aspnetcore_template/apps/vite_aspnetcore_template_front/src/styles/main.css
+++ b/fullStack/vite_aspnetcore_template/apps/vite_aspnetcore_template_front/src/styles/main.css
@@ -1,7 +1,11 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
-html {
-  color: hsl(var(--twc-neutral-900));
+@layer base {
+  * {
+    transition: border-color 300ms, color 300ms, background-color 300ms;
+  }
+  *:focus {
+    outline: none
+  } 
 }
+@tailwind components;
+@tailwind utilities;
